some html5 tag list and description

--- a/index.html
+++ b/index.html
@@ -11,10 +11,47 @@
 
 <body>
     <header>
-        <h1 class="text-center display-1">HTML5 Tag List</h1>
+        <h1 class="text-center display-1 text-info">HTML5 Tag List and Description</h1>
     </header>
     <main>
+        <dl class="p-5 border border-info">
+            <dt>article</dt>          
+            <dd>-----Defines an article</dd>
 
+            <dt>aside</dt>
+            <dd>-----It defines some content looslely related to the page like side-bar </dd>
+
+            <dt>audio</dt>
+            <dd>-----Audio straming on web page , embeds a sonund in html document </dd>
+
+            <dt>bdi</dt>
+            <dd>-----Used for bidrectional text formating</dd>
+
+            <dt>canvas</dt>
+            <dd>-----defines a region in the document and draw graph through javascript</dd>
+
+            <dt>data</dt>
+            <dd>-----Links a piece of content with a machine readable translation</dd>
+
+            <dt>datalist</dt>
+            <dd>-----Represents a set of pre-defined options for an input element</dd>
+
+            <dt>details</dt>
+            <dd>-----Represents a widget from which the user can obtain additional information or controls on-demand.</dd>
+
+            <dt>dialog</dt>
+            <dd>-----It defines a subwindow or we can say dialog box</dd>
+
+            <dt>dialog</dt>
+            <dd>-----It defines a subwindow or we can say dialog box</dd>
+
+            <dt>embed</dt>
+            <dd>-----embed external application like multimedia content audio, video into html document</dd>
+
+            <dt>figure</dt>
+            <dd>-----Represents a figure illustrated as part of the document</dd>
+
+        </dl>
     </main>
     <script src="js/bootstrap.bundle.min.js"></script>
 </body>
