added some others html5 tags

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
     <main>
         <dl class="p-5 border border-info">
-            <dt>article</dt>          
+            <dt>article</dt>
             <dd>-----Defines an article</dd>
 
             <dt>aside</dt>
@@ -37,7 +37,8 @@
             <dd>-----Represents a set of pre-defined options for an input element</dd>
 
             <dt>details</dt>
-            <dd>-----Represents a widget from which the user can obtain additional information or controls on-demand.</dd>
+            <dd>-----Represents a widget from which the user can obtain additional information or controls on-demand.
+            </dd>
 
             <dt>dialog</dt>
             <dd>-----It defines a subwindow or we can say dialog box</dd>
@@ -50,6 +51,68 @@
 
             <dt>figure</dt>
             <dd>-----Represents a figure illustrated as part of the document</dd>
+
+            <dt>figcaption</dt>
+            <dd>-----It defines a caption or legend for a figure</dd>
+
+            <dt>footer</dt>
+            <dd>-----It presents footer of a document or a section</dd>
+
+            <dt>header</dt>
+            <dd>-----It presents the header of a document or a section</dd>
+
+            <dt>hgroup</dt>
+            <dd>-----It defines a group of headings</dd>
+
+            <dt>keygen</dt>
+            <dd>-----Controls for generating a public-private key pair</dd>
+
+            <dt>main</dt>
+            <dd>-----Represents the main or dominant contentb the document</dd>
+
+            <dt>mark</dt>
+            <dd>-----It represents text highlighted for reference purpose </dd>
+
+            <dt>menuitem</dt>
+            <dd>-----Defines a list of commands that user can perform </dd>
+
+            <dt>meter</dt>
+            <dd>-----Represents a Scalar measurement within a known range</dd>
+
+            <dt>nav</dt>
+            <dd>-----Defines a section of navigation links</dd>
+
+            <dt>output</dt>
+            <dd>-----Defines a results of a calculation</dd>
+
+            <dt>picture</dt>
+            <dd>-----Defines a container for multiple image sources</dd>
+
+            <dt>progress</dt>
+            <dd>-----It represents the completion progress of a task</dd>
+
+            <dt>rp</dt>
+            <dd>-----provides full-back parenthesis for browser that don't support ruby annotations</dd>
+
+            <dt>rt</dt>
+            <dd>-----Defines the pronunciation of character presented in a ruby annotations</dd>
+
+            <dt>ruby</dt>
+            <dd>-----Represents a ruby annotation</dd>
+
+            <dt>section</dt>
+            <dd>-----Defines a section of a document, such as header , footer etc</dd>
+
+            <dt>source</dt>
+            <dd>-----Defines alternative media resources for the media elements like audio or video</dd>
+
+            <dt>summary</dt>
+            <dd>-----Defines summary for the details element</dd>
+
+            <dt>svg</dt>
+            <dd>-----Embed SVG (Scalable Vector Graphics) content in an HTML document.</dd>
+
+
 
         </dl>
     </main>
